@@ -130,6 +130,10 @@ void	gain_condition(struct char_data *ch, int condition, int value);
 void	point_update(void);
 void	update_pos(struct char_data *victim);
 void run_autowiz(void);
+int  increase_gold(struct char_data *ch, int amt);
+int  decrease_gold(struct char_data *ch, int amt);
+int  increase_bank(struct char_data *ch, int amt);
+int  decrease_bank(struct char_data *ch, int amt);
 
 /* in class.c */
 void    advance_level(struct char_data *ch);
