@@ -35,6 +35,10 @@ export (QQ's a zone into a tarball)
 Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
 (lots of major bugfixes too)
 @
+[Nov 26 2010] - Jamdog
+  Bug-Fix: set level now allows GRGOD or higher to set to any mortal level
+  Advance command changed to work for both mortal and admin levels
+  Added increase_gold and increase_bank functions to prevent cash overflows
 [Nov 25 2010] - Jamdog
   Added diagonal directions with cedit toggle (default to 'off')
   Bug-Fix: admin <player> default now targets the victim player
